# FastAPIProject2

./: docker-compose.yml  main.py  pyproject.toml
src/: session.py
src/clients/: fastapi_project.py  users.py
src/config/: config.py  kafka.py
src/messaging/: consumer.py  exceptions.py  schemas.py  settings.py
src/processed/: repository.py  table.py
src/routes/: users.py
src/services/: users.py
src/users/: client.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/utils/: retry.py
